# file_transfer

./: .gitignore  Cargo.toml  README.md  metadata.json  onchainmetadata.json  package.json
api/: file_transfer:template.os-v0.wit
file_transfer/: Cargo.toml
file_transfer/src/: lib.rs
kino_files/: Cargo.toml
kino_files/src/: icon  lib.rs
pkg/: cookbookentry.md  manifest.json  metadata.json
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  FileEntry.tsx  index.css  input.css
ui/src/components/: FileEntry.tsx  FileIcon.tsx  Modal.tsx  MyFiles.tsx  PermissionsModal.tsx  SearchFiles.tsx  UploadFiles.tsx
ui/src/store/: fileTransferStore.ts
ui/src/types/: KinoFile.ts
ui/src/utils/: file.ts
worker/: Cargo.toml
worker/src/: lib.rs
