[package]
name = "kino_files"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
git2 = "0.18.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", rev = "84b3d84" }
wit-bindgen = "0.24.0"
multipart = "0.18.0"
base64 = "0.21.7"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
